--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
+    "dayjs": "^1.11.13",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18"
