--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dayjs": "^1.11.13",
     "next": "14.2.23",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
