--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "next": "14.2.23",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^11.0.3"
