--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
     "axios": "^1.7.9",
+    "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.23",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
