--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.0.0",
     "@mui/material": "^6.4.2",
+    "@types/qs": "^6.9.18",
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "next": "14.2.23",
     "nookies": "^2.5.2",
+    "qs": "^6.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
