카드컴포넌트 효과 및 적용 framer motion 라이브러리 사용

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.3",
     "jwt-decode": "^4.0.0",
     "next": "14.2.23",
     "nookies": "^2.5.2",
