--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.2",
     "@types/qs": "^6.9.18",
     "@types/react-input-mask": "^3.0.6",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
@@ -31,6 +32,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
